force-app/main/default/objects/Booking__c/fields/Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_Time__c</fullName>
    <inlineHelpText>Is Auto calculated based on the taxi drop off date time</inlineHelpText>
    <label>Arrival Date Time</label>
    <summarizedField>Taxi_Booking__c.Drop_off_Date_Time__c</summarizedField>
    <summaryForeignKey>Taxi_Booking__c.Booking__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>