force-app/main/default/objects/Booking__c/fields/az_customer_id__c.field-meta.xml
<CustomField>
    <fullName>az_customer_id__c</fullName>
    <label>Az_customer_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>