force-app/main/default/objects/Booking__c/fields/Companion_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Companion_Date_of_Birth__c</fullName>
    <label>Companion Date of Birth</label>
    <type>Date</type>
</CustomField>