force-app/main/default/objects/Booking__c/fields/Companion_Name__c.field-meta.xml
<CustomField>
    <fullName>Companion_Name__c</fullName>
    <label>Companion Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>