force-app/main/default/objects/Booking__c/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dental</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dentist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings (Dental)</relationshipLabel>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>