force-app/main/default/objects/Booking__c/fields/Dentist_Time__c.field-meta.xml
<CustomField>
    <fullName>Dentist_Time__c</fullName>
    <label>Dentist Time</label>
    <type>DateTime</type>
</CustomField>