force-app/main/default/objects/Booking__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <inlineHelpText>Is Acuto Calculated based on Taxi pickup from hotel</inlineHelpText>
    <label>Departure Date Time</label>
    <summarizedField>Taxi_Booking__c.Pickup_Date_Time__c</summarizedField>
    <summaryForeignKey>Taxi_Booking__c.Booking__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>