force-app/main/default/objects/Booking__c/fields/Desired_bra_size__c.field-meta.xml
<CustomField>
    <fullName>Desired_bra_size__c</fullName>
    <label>Desired bra size</label>
    <length>225</length>
    <type>Text</type>
</CustomField>