force-app/main/default/objects/Booking__c/fields/Desired_Incision__c.field-meta.xml
<CustomField>
    <fullName>Desired_Incision__c</fullName>
    <label>Desired Incision?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armpits</fullName>
            </value>
            <value>
                <fullName>Under Breast Crease</fullName>
            </value>
            <value>
                <fullName>Lower edge of Areola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>