force-app/main/default/objects/Booking__c/fields/Doctor_Paid__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Paid__c</fullName>
    <formula>IF( Total_Payables__c &gt; 0,  IF(  Total_Payables_Amount__c &gt; 0 , &#39;No&#39;, &#39;Yes&#39;) , &#39;No&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Paid</label>
    <type>Text</type>
</CustomField>