force-app/main/default/objects/Booking__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>This field is will save emergency contact name.</description>
    <label>Emergency Contact Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>