force-app/main/default/objects/Booking__c/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <label>Emergency Contact Phone</label>
    <length>225</length>
    <type>Text</type>
</CustomField>