force-app/main/default/objects/Booking__c/fields/End_Date_2__c.field-meta.xml
<CustomField>
    <fullName>End_Date_2__c</fullName>
    <label>End Date 2</label>
    <type>Date</type>
</CustomField>