force-app/main/default/objects/Booking__c/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <label>firstname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>