force-app/main/default/objects/Booking__c/fields/Is_Flight_info_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Flight_info_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flight info uploaded?</label>
    <type>Checkbox</type>
</CustomField>