force-app/main/default/objects/Booking__c/fields/Is_Flight_info_uploaded_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Flight_info_uploaded_Formula__c</fullName>
    <formula>IF(Is_Flight_info_uploaded__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;) &amp; &quot; Uploaded&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;) &amp; &quot; Not Yet Uploaded&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Flight info uploaded?</label>
    <type>Text</type>
</CustomField>