force-app/main/default/objects/Booking__c/fields/Is_passport_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_passport_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is passport uploaded?</label>
    <type>Checkbox</type>
</CustomField>