force-app/main/default/objects/Booking__c/fields/Is_passport_uploaded_formula__c.field-meta.xml
<CustomField>
    <fullName>Is_passport_uploaded_formula__c</fullName>
    <formula>IF(Is_passport_uploaded__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;) &amp; &quot; Uploaded&quot;, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;) &amp; &quot; Not Yet Uploaded&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is passport uploaded?</label>
    <type>Text</type>
</CustomField>