force-app/main/default/objects/Booking__c/fields/Is_waiver_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_waiver_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is waiver uploaded?</label>
    <type>Checkbox</type>
</CustomField>