force-app/main/default/objects/Booking__c/fields/Last_Notify_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Notify_Date_Time__c</fullName>
    <label>Last Notify Date Time</label>
    <type>DateTime</type>
</CustomField>