force-app/main/default/objects/Booking__c/fields/Num_Itineraries__c.field-meta.xml
<CustomField>
    <fullName>Num_Itineraries__c</fullName>
    <label>Num Itineraries</label>
    <summaryForeignKey>Itenrary__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>