force-app/main/default/objects/Booking__c/fields/Personal_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Personal_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Assistant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Assistant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings (Personal Assistant)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>