force-app/main/default/objects/Booking__c/fields/Preferred_Date_of_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Surgery__c</fullName>
    <label>Preferred Date of Surgery</label>
    <type>Date</type>
</CustomField>