force-app/main/default/objects/Booking__c/fields/Procedure_Type__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Type__c</fullName>
    <label>Procedure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Dental Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>