force-app/main/default/objects/Booking__c/fields/Procedures_Requested_Please_Specify__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Requested_Please_Specify__c</fullName>
    <label>Procedures Requested (Please Specify)</label>
    <type>TextArea</type>
</CustomField>