force-app/main/default/objects/Booking__c/fields/residency__c.field-meta.xml
<CustomField>
    <fullName>residency__c</fullName>
    <description>Passport Country</description>
    <label>residency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>