force-app/main/default/objects/Booking__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <summarizedField>Session__c.Session_days__c</summarizedField>
    <summaryForeignKey>Session__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>