force-app/main/default/objects/Booking__c/fields/Superannuation__c.field-meta.xml
<CustomField>
    <fullName>Superannuation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If you are seeking the compassionate release of superannuation funding, please attach your referral letter from your qualified GP. This letter is required before we supply our supporting documentation. Please note, if you choose to proceed with an alternative provider, or wish to cancel once approved for funding, you will incur a $500 service fee payable immediately.</description>
    <inlineHelpText>If you are seeking the compassionate release of superannuation funding, please attach your referral letter from your qualified GP. This letter is required before we supply our supporting documentation. Please note, if you choose to proceed with an alterna</inlineHelpText>
    <label>Superannuation</label>
    <referenceTo>Superannuation__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>