force-app/main/default/objects/Booking__c/fields/Surgery_Date__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Date__c</fullName>
    <description>This will show min date of session</description>
    <label>Surgery Date</label>
    <summarizedField>Session__c.Start_Date__c</summarizedField>
    <summaryForeignKey>Session__c.Booking__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>