force-app/main/default/objects/Booking__c/fields/surname__c.field-meta.xml
<CustomField>
    <fullName>surname__c</fullName>
    <label>surname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>