force-app/main/default/objects/Booking__c/fields/Total_Medical_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Medical_Balance__c</fullName>
    <label>Total Medical Balance</label>
    <summarizedField>Session__c.Medical_Balance__c</summarizedField>
    <summaryForeignKey>Session__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>