force-app/main/default/objects/Booking__c/fields/Total_Payables__c.field-meta.xml
<CustomField>
    <fullName>Total_Payables__c</fullName>
    <label>Total Payables</label>
    <summaryForeignKey>Payable__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>