force-app/main/default/objects/Booking__c/fields/Total_Payables_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payables_Amount__c</fullName>
    <label>Total Payables Amount</label>
    <summarizedField>Payable__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payable__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Payable__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>