force-app/main/default/objects/Booking__c/fields/Video_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Video_Consultation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for the video consultation. If video consultation is needed if not then leave it empty.</description>
    <label>Video Consultation</label>
    <type>Checkbox</type>
</CustomField>