force-app/main/default/objects/Booking__c/fields/Video_Consultation_Date__c.field-meta.xml
<CustomField>
    <fullName>Video_Consultation_Date__c</fullName>
    <label>Video Consultation Date</label>
    <type>Date</type>
</CustomField>