force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Preferred_Date_of_Surgery__c</columns>
    <columns>Arrival_Date_Time__c</columns>
    <columns>Personal_Assistant__c</columns>
    <columns>Doctor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>